--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -72,6 +72,10 @@
                 <div class="chart-content" id="sharpe-plot"></div>
             </div>
         </div>
+        <div class="chart-container full-width">
+            <h3 class="chart-title">Correlation Matrix</h3>
+            <div class="chart-content" id="correlation-plot" style="justify-content: center;"></div>
+        </div>
     </div>
     
     <div class="tooltip" id="tooltip"></div>
